--- a/app/src/main/res/layout/red_pixel_detector.xml
+++ b/app/src/main/res/layout/red_pixel_detector.xml
@@ -12,7 +12,7 @@
         android:id="@+id/btnPickImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="312dp"
         android:onClick="uploadImage"
         android:text="Pick Image"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,10 +25,19 @@
         android:layout_height="305dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.252"
+        app:layout_constraintVertical_bias="0.037"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <ListView
+        android:id="@+id/listViewMeasurements"
+        android:layout_width="327dp"
+        android:layout_height="213dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnPickImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
