--- a/app/src/main/res/layout/fragment_header.xml
+++ b/app/src/main/res/layout/fragment_header.xml
@@ -1,17 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/header_brackground">
+    android:orientation="horizontal"
+    android:background="@color/light_grey">
 
+    <!-- Logo -->
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="8dp"
+        android:src="@drawable/raven"
+        android:background="@drawable/logo_background_small" />
+
+    <!-- Title "Birdsaver" -->
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center_horizontal"
-        android:padding="16dp" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="BIRDSAVER"
+        android:textColor="@color/dark_grey"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
