--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light_green">#C4EBB2</color>
     <color name="light_grey">#e4e6e3</color>
     <color name="dark_grey">#60615f</color>
+    <color name="green">#2e6b12</color>
 </resources>
