--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -41,6 +41,19 @@
         app:layout_constraintTop_toBottomOf="@id/header" />
 
     <!-- Camera -->
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="63dp"
+        android:layout_height="34dp"
+        android:layout_marginTop="72dp"
+        android:onClick="startButtonClicked"
+        android:padding="0dp"
+        android:text="@string/start"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.273"
+        app:layout_constraintStart_toEndOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@id/header" />
+
     <ImageView
         android:id="@+id/view"
         android:layout_width="300dp"
