--- a/app/src/main/res/layout/ip_address_view.xml
+++ b/app/src/main/res/layout/ip_address_view.xml
@@ -105,6 +105,7 @@
         android:text="@string/startCalibration"
         android:textAlignment="center"
         android:textColor="@color/dark_grey"
+        android:onClick="startCalibration"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
