--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -40,7 +40,6 @@
         app:layout_constraintStart_toEndOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@id/header" />
 
-    <!-- Camera -->
     <Button
         android:id="@+id/submitButton"
         android:layout_width="63dp"
@@ -49,11 +48,14 @@
         android:onClick="startButtonClicked"
         android:padding="0dp"
         android:text="@string/start"
+        android:backgroundTint="@color/light_green"
+        android:textColor="@color/dark_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.273"
         app:layout_constraintStart_toEndOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@id/header" />
 
+    <!-- Camera -->
     <ImageView
         android:id="@+id/view"
         android:layout_width="300dp"
