--- a/app/src/main/res/layout/red_pixel_detector.xml
+++ b/app/src/main/res/layout/red_pixel_detector.xml
@@ -5,7 +5,7 @@
     android:id="@+id/Button1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".IpAddressActivity">
 
     <!-- header -->
     <include layout="@layout/fragment_header"
