--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -89,6 +89,20 @@
         app:layout_constraintStart_toEndOf="@+id/gpsCoord"
         app:layout_constraintTop_toBottomOf="@id/view" />
 
+    <!-- GPS Settings -->
+    <ImageButton
+        android:id="@+id/logo"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/home"
+        android:onClick="navigateToGPS"
+        android:src="@drawable/questionmark"
+        app:layout_constraintStart_toEndOf="@id/gpsValue"
+        app:layout_constraintTop_toBottomOf="@id/view" />
+
     <!-- Description "Date" -->
     <TextView
         android:id="@+id/date"
