--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -112,7 +112,7 @@
         android:text="@string/date"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/gpsCoord" />
+        app:layout_constraintTop_toBottomOf="@id/gpsValue" />
 
     <TextView
         android:id="@+id/dateValue"
