--- a/app/src/main/res/layout/activity_gps.xml
+++ b/app/src/main/res/layout/activity_gps.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".GPSActivity">
+    tools:context=".legacy.GPSActivity">
 
     <!-- header -->
     <include layout="@layout/fragment_header"
