--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,8 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.MNBirdSaver" parent="Base.Theme.MNBirdSaver" />
+    <style name="Theme.MNBirdSaver" parent="Base.Theme.MNBirdSaver">
+        <item name="android:statusBarColor">@color/light_grey</item>
+        <item name="android:windowLightStatusBar">true</item> <!-- Optional für dunklen Text auf der Statusleiste -->
+    </style>
 </resources>
