--- a/app/src/main/res/layout/camera_view.xml
+++ b/app/src/main/res/layout/camera_view.xml
@@ -131,7 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="20dp"
         android:text="@string/instructionHeadline"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -157,29 +157,34 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/instruction_background"
         android:padding="10dp"
-        android:text="Bewegen Sie sich ins Kamerabild, sodass Sie sich selbst sehen."
+        android:text="Klicken Sie auf den Start Button."
         android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/check"
         app:layout_constraintTop_toBottomOf="@+id/instructionHeadline" />
 
-    <!-- Calibrate Button -->
-    <Button
-        android:id="@+id/button"
-        android:layout_width="300dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/light_green"
-        android:insetBottom="0dp"
-        android:text="@string/startCalibration"
-        android:textAlignment="center"
-        android:textColor="@color/dark_grey"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
+    <TextView
+        android:id="@+id/simulationLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/Sim"
+        android:textSize="16sp"
+        app:layout_constraintHorizontal_bias="0.136"
+        app:layout_constraintEnd_toStartOf="@+id/SimOnOff"
         app:layout_constraintTop_toBottomOf="@id/instruction" />
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/SimOnOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginTop="12dp"
+        app:thumbTint="@color/dark_grey"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/instruction" />
 
     <!-- Footer -->
     <include
@@ -188,18 +193,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent" />
-
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/SimOnOff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/Sim"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.173"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:layout_constraintVertical_bias="0.176" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
